# orandom

./: .gitignore  .travis.yml  Makefile  README.md  dune-project  orandom.opam  orandom.opam.template
.circleci/: config.yml
.github/workflows/: main.yml
lib/: dune  random.ml  random.mli
test/: dune  random.ml  util.ml
test/resources/: data_polynomial.txt  data_sinusoidal.txt
