opam-version: "2.0"
name: "orandom"
version: "0.1.0"
synopsis: "OCaml library for java.util.Random"
maintainer: "r6eve <r6eve179f@gmail.com>"
author: "r6eve <r6eve179f@gmail.com>"
homepage: "https://github.com/r6eve/orandom"
bug-reports: "https://github.com/r6eve/orandom/issues"
license: "Boost Software License - Version 1.0"
dev-repo: "git+https://github.com:r6eve/orandom.git"
build: [
  ["dune" "build" "-p" name]
]
depends: [
  "ocaml" {>= "4.07.0"}
  "dune" {build}
  "qcheck"
]
